tests/error/modifier_errors/unitary_loop.py
from guppylang.decorator import guppy


@guppy(unitary=True)
def test() -> None:
    for _ in range(46):
        pass

test.compile()
