tests/error/modifier_errors/unitary_loop.err
Error: Invalid expression in dagger (at $FILE:6:4)
  | 
4 | @guppy(unitary=True)
5 | def test() -> None:
6 |     for _ in range(46):
  |     ^^^^^^^^^^^^^^^^^^^
7 |         pass
  | ^^^^^^^^^^^^ Loop found in a dagger context

Guppy compilation failed due to 1 previous error
